# onnxruntime-ep-style-bert-vits2-ggml

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.ps1  build.sh  pyproject.toml
.github/workflows/: linux-runtime.yml  release-macos-runtime.yml  windows-runtime.yml
docs/: aivis-engine-integration.md  architecture.md  benchmark.md  build.md  engine-integration.md  jp-bert-gguf-quantization.md
native/: CMakeLists.txt
native/src/: style_bert_vits2_ggml_onnx_ep.cc
scripts/: benchmark_onnx_ggml_provider.py  build_runtime_bundle.py  reproduce_onnx_ggml_benchmark.py
src/onnxruntime_ep_aivis_ggml/: cache.py  signature.py
src/onnxruntime_ep_style_bert_vits2_ggml/: __init__.py  cache.py  engine_cache.py  engine_integration.py  gguf_writer.py  initializer_pack.py  models.py  pyinstaller.py  runtime.py  signature.py  tts_cpp_mapping.py
tests/unit/: test_build_runtime_bundle.py  test_engine_cache.py  test_engine_integration.py  test_models.py  test_onnx_ggml_tensor_mapping.py  test_pyinstaller.py  test_runtime.py
