[project]
name = "onnxruntime-ep-style-bert-vits2-ggml"
version = "0.1.0"
description = "Style-Bert-VITS2 ggml ONNX Runtime Plugin Execution Provider"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
convert = [
  "aivmlib>=1.2.1,<2.0.0",
  "gguf",
  "huggingface-hub",
  "numpy",
  "onnx",
  "safetensors",
]
convert-pytorch = [
  "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.11.1,<1.0.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/onnxruntime_ep_style_bert_vits2_ggml"]
artifacts = [
  "src/onnxruntime_ep_style_bert_vits2_ggml/lib/*",
]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/native",
]
